fix: FestivalReminderScheduler N+1 쿼리를 그룹 배치 조회로 최적화
페스티벌별로 반복 호출되던 라인업/팔로워 조회를 festivalIds/artistIds
일괄 조회 후 메모리에서 그룹핑하는 방식으로 변경. 새로 추가한
findArtistIdAndUserIdByArtistIdIn 도입으로 더 이상 쓰이지 않게 된
findUserIdsByArtistIdIn은 죽은 코드로 함께 제거.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>